# GrammarCorrector

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml  requirements.txt  setup.cfg
grammarcorrector/: __init__.py  demo.py  grammarcorrector.py
